# player-samples

./: README.md
casanova/: settings.gradle
casanova/app/: build.gradle
casanova/app/src/androidTest/java/com/example/casanova/: ExampleInstrumentedTest.kt
casanova/app/src/main/: AndroidManifest.xml
casanova/app/src/main/app/: CMakeLists.txt  jnicall.cpp
casanova/app/src/main/app/ffmpeg/include/libavcodec/: vaapi.h
casanova/app/src/main/app/ffmpeg/include/libavformat/: avformat.h
casanova/app/src/main/app/ffmpeg/player/: Decoder.h  DecoderBase.cpp  DecoderBase.h
casanova/app/src/main/app/ffmpeg/render/: NativeRender.cpp  NativeRender.h
casanova/app/src/main/java/com/example/casanova/: ContextUtil.kt  Contract.kt  MainActivity.kt  SAdapter.kt
casanova/app/src/main/java/com/example/casanova/model/: MediaRepo.kt  Video.kt
casanova/app/src/main/java/com/example/casanova/player/Manager/: CasanovaManager.kt  CasanovaManagerImpl.kt
casanova/app/src/main/java/com/example/casanova/player/interface/: Casanova.kt  CasanovaBuilder.kt
casanova/app/src/main/java/com/example/casanova/player/internal/: CasanovaDecoder.kt  CasanovaImpl.kt  CasanovaRender.kt
casanova/app/src/main/java/com/example/casanova/player/ni/: FFmpegPlayer.kt  JNIT.kt
casanova/app/src/main/res/layout/: activity_main.xml  item_recycler.xml
casanova/app/src/main/res/values/: strings.xml
casanova/app/src/test/java/com/example/casanova/: ExampleUnitTest.kt
casanova/gradle/wrapper/: gradle-wrapper.properties
casanova/libcasanova/src/androidTest/java/com/example/libcasanova/: ExampleInstrumentedTest.kt
casanova/libcasanova/src/main/: AndroidManifest.xml
casanova/libcasanova/src/test/java/com/example/libcasanova/: ExampleUnitTest.kt
scripts/: buildso.sh
